playground notebook update

--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -30,49 +30,10 @@
     "from playground.utils import cb_df, ccb_df, get_simulation\n",
     "from playground.dashboard import Dashboard\n",
     "from playground.vw_playground import VwPlayground\n",
+    "from playground.visualizers import new_ax, TrackIt, plot_reward\n",
     "\n",
     "%matplotlib widget\n",
-    "sns.set_theme(style=\"darkgrid\")\n",
-    "\n",
-    "def new_ax():\n",
-    "    _,ax = plt.subplots(dpi=100, figsize=[9,4])\n",
-    "    return ax"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualizers (generic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_reward(examples, job, ax=None, window=10):\n",
-    "    ax = ax or new_ax()\n",
-    "    ax.set_title('Average reward')\n",
-    "    df = job.loss_table.rolling(window=window).mean()\n",
-    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', errorbar=None, sort=False, estimator=None, ax=ax)\n",
-    "    p.set_ylabel(\"reward\")\n",
-    "    p.set(ylim=(0, 1))\n",
-    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
-    "\n",
-    "class TrackIt:\n",
-    "    def __init__(self, extractor, title):\n",
-    "        self._values = []\n",
-    "        self._title = title\n",
-    "        self._extractor = extractor\n",
-    "\n",
-    "    def __call__(self, examples, job, ax=None, window=10):\n",
-    "        self._values.append(self._extractor(job))\n",
-    "        ax.set_title(self._title)\n",
-    "        p = sns.lineplot(x = range(len(self._values)), y= self._values, label=self._title, errorbar=None, sort=False, estimator=None, ax=ax)\n",
-    "        p.set_ylabel(self._title)\n",
-    "        ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
+    "sns.set_theme(style=\"darkgrid\")"
    ]
   },
   {
@@ -239,7 +200,7 @@
     "\n",
     "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
     "\n",
-    "playground = VwPlayground(my_cb_simulation, dashboard)\n",
+    "playground = VwPlayground(my_cb_simulation, dashboard, vw_binary='vw')\n",
     "\n",
     "playground.run(\n",
     "    simulator_grid = {\n",
@@ -249,7 +210,7 @@
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100, --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -266,8 +227,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Last command line')\n",
-    "print(playground.last_job[0].args)"
+    "print(f'Last data file: {playground.examples_path}')\n",
+    "print(f'Last command line: {playground.last_job[0].args}')\n",
+    "print(f'Last exception: {playground.exception}')\n"
    ]
   },
   {
@@ -457,8 +419,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Last command line')\n",
-    "print(playground.last_job[0].args)"
+    "print(f'Last data file: {playground.examples_path}')\n",
+    "print(f'Last command line: {playground.last_job[0].args}')\n",
+    "print(f'Last exception: {playground.exception}')"
    ]
   },
   {
