--- a/from_mwt_ds/DataScience/notebooks/explorations.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/explorations.ipynb
@@ -36,13 +36,10 @@
     "from playground.utils import get_simulation, cb_df\n",
     "from playground.dashboard import Dashboard\n",
     "from playground.vw_playground import VwPlayground\n",
+    "from playground.visualizers import new_ax, plot_reward\n",
     "\n",
     "%matplotlib widget\n",
-    "sns.set_theme(style=\"darkgrid\")\n",
-    "\n",
-    "def new_ax():\n",
-    "    _,ax = plt.subplots(dpi=100, figsize=[9,4])\n",
-    "    return ax"
+    "sns.set_theme(style=\"darkgrid\")"
    ]
   },
   {
@@ -116,7 +113,7 @@
     "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'],\n",
     "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
-    "                         ci=None, sort=False, estimator=None)       \n",
+    "                         errorbar=None, sort=False, estimator=None)       \n",
     "    ax.legend()\n",
     "\n",
     "    \n",
@@ -132,7 +129,7 @@
     "            d = df[(df['person']==p)][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)],\n",
     "                         label=f'P({t}|{p})',color = colors[j], linestyle = styles[i], ax=ax,\n",
-    "                         ci=None, sort=False, estimator=None)            \n",
+    "                         errorbar=None, sort=False, estimator=None)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.9, 0.5)) \n",
     "     "
    ]
@@ -483,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -497,11 +494,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
+    "hash": "a9d13462683d0a0a4577d32cb0c80597d2d736f52010de23db877ba50e997557"
    }
   }
  },
