log_output stderr

--- a/from_mwt_ds/DataScience/notebooks/explorations.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/explorations.ipynb
@@ -164,7 +164,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -212,7 +212,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -253,7 +253,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -295,7 +295,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -338,7 +338,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --synthcover'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100  --log_output stderr --synthcover'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -381,7 +381,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --squarecb'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100  --log_output stderr --squarecb'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -423,7 +423,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --regcb'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100  --log_output stderr --regcb'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -464,7 +464,7 @@
     "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --softmax'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100  --log_output stderr --softmax'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-3), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': fixed('mtr'),\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
