--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -210,7 +210,7 @@
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100, --log_output stderr'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
