--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -27,7 +27,7 @@
     "import scipy\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "from playground.utils import cb_df, ccb_df, get_simulation\n",
+    "from playground.utils import cb_df, ccb_df, get_simulation, Metric\n",
     "from playground.dashboard import Dashboard\n",
     "from playground.vw_playground import VwPlayground\n",
     "from playground.visualizers import new_ax, TrackIt, plot_reward\n",
@@ -196,9 +196,9 @@
    "source": [
     "layout = [\n",
     "    [plot_env, plot_probs],\n",
-    "    [plot_reward, TrackIt(extractor=lambda job: job[-1].metrics['average loss'], title='loss')]]\n",
+    "    [plot_reward, TrackIt(Metric('average loss'), 'loss')]]\n",
     "\n",
-    "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
+    "dashboard = Dashboard(['-p'], layout, figsize=(12,6))\n",
     "\n",
     "playground = VwPlayground(my_cb_simulation, dashboard, vw_binary='vw')\n",
     "\n",
@@ -210,7 +210,7 @@
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --log_output stderr'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 1000 --log_output stderr'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
